--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -2,6 +2,9 @@
     width:180px;
     height:180px;
     margin:10px;
+    box-shadow: 0 0 10px #444;
+    border: 1px solid #444;
+    border-radius: 14px!important;
 }
 
 .img-article1 {
@@ -9,15 +12,22 @@
     margin-left: auto;
     margin-right: auto;
     width: 580px;
-    height:580px;
+    height:auto;
+    box-shadow: 0 0 10px #444;
+    border: 1px solid #444;
+    border-radius: 14px!important;
+}
+
+.crd {
+    border-radius: 24px!important;
 }
 
 .bg-dark-grey {
-    background-color: #e7ebef!important;
+    background-color: #ffcc5c!important;
 }
 
 .bg-grey {
-    background-color: #e2e4ea47!important;
+    background-color: #96ceb4!important;
 }
 
 .card-body a {
@@ -31,5 +41,21 @@
 
 .cat-color {
     color: darkslateblue!important;
+}
+
+.btn-clr {
+    background-color: #ffcc5c;
+}
+
+.body-clr {
+    background-image:linear-gradient(45deg,#75e1e4,#5ea2e1,#375f85,#bb5397,blue,pink);
+}
+
+.navbar {
+    background: rgba(0,0,0,0.5)!important;
+}
+
+.txt-clr {
+    color: #ffffff;
 }
 
