--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -47,6 +47,10 @@
     background-color: #ffcc5c;
 }
 
+.btn-clr2 {
+    background-color: #bb5397;
+}
+
 .body-clr {
     background-image:linear-gradient(45deg,#75e1e4,#5ea2e1,#375f85,#bb5397,blue,pink);
 }
