--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -53,6 +53,7 @@
 
 .body-clr {
     background-image:linear-gradient(45deg,#75e1e4,#5ea2e1,#375f85,#bb5397,blue,pink);
+    /*background-image:linear-gradient(45deg, #97e9ec, #a5c8ea, #aac7e7, #b28399);*/
 }
 
 .navbar {
@@ -61,5 +62,14 @@
 
 .txt-clr {
     color: #ffffff;
+}
+
+.img-cmn {
+    width:500px;
+    height:auto;
+    margin:2px;
+    box-shadow: 0 0 10px #444;
+    border: 1px solid #444;
+    border-radius: 1px!important;
 }
 
