--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,3 +1,14 @@
+/* images */
+
+.img-cmn {
+    width: 500px;
+    height: auto;
+    margin: 2px;
+    box-shadow: 0 0 10px #444;
+    border: 1px solid #444;
+    border-radius: 1px !important;
+}
+
 .img-article {
     width:180px;
     height:180px;
@@ -18,9 +29,9 @@
     border-radius: 14px!important;
 }
 
-.crd {
-    border-radius: 24px!important;
-}
+
+
+/* background color*/
 
 .bg-dark-grey {
     background-color: #ffcc5c!important;
@@ -29,6 +40,18 @@
 .bg-grey {
     background-color: #96ceb4!important;
 }
+
+.body-clr {
+    background-image:linear-gradient(45deg,#75e1e4,#5ea2e1,#375f85,#bb5397,blue,pink);
+}
+
+.navbar {
+    background: rgba(0,0,0,0.5)!important;
+}
+
+
+
+/*another*/
 
 .card-body a {
     text-decoration: none;
@@ -51,25 +74,16 @@
     background-color: #bb5397;
 }
 
-.body-clr {
-    background-image:linear-gradient(45deg,#75e1e4,#5ea2e1,#375f85,#bb5397,blue,pink);
-    /*background-image:linear-gradient(45deg, #97e9ec, #a5c8ea, #aac7e7, #b28399);*/
-}
-
-.navbar {
-    background: rgba(0,0,0,0.5)!important;
-}
-
 .txt-clr {
     color: #ffffff;
 }
 
-.img-cmn {
-    width:500px;
-    height:auto;
-    margin:2px;
-    box-shadow: 0 0 10px #444;
-    border: 1px solid #444;
-    border-radius: 1px!important;
+.crd-brd {
+    border: 3px solid #444;
+}
+
+.non-dcr {
+    text-decoration: none;
+    color: white;
 }
 
