--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -42,7 +42,7 @@
 }
 
 .body-clr {
-    background-image:linear-gradient(45deg,#75e1e4,#5ea2e1,#375f85,#bb5397,blue,pink);
+    background-image:linear-gradient(45deg,#75e1e4,#5ea2e1,#375f85,#bb5397);
 }
 
 .navbar {
