--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -15,7 +15,7 @@
     margin:10px;
     box-shadow: 0 0 10px #444;
     border: 1px solid #444;
-    border-radius: 14px!important;
+    border-radius: 6px!important;
 }
 
 .img-article1 {
@@ -26,7 +26,7 @@
     height:auto;
     box-shadow: 0 0 10px #444;
     border: 1px solid #444;
-    border-radius: 14px!important;
+    border-radius: 6px!important;
 }
 
 
@@ -80,6 +80,7 @@
 
 .crd-brd {
     border: 3px solid #444;
+    border-radius: 6px!important;
 }
 
 .non-dcr {
@@ -87,3 +88,10 @@
     color: white;
 }
 
+.crd-dcr {
+    border-radius: 14px!important;
+}
+
+.crd-dcr-2 {
+    border-radius: 10px!important;
+}
